# yolo-face-blur

./: README.md  pyproject.toml
.github/workflows/: lint.yml
faceblur/: main.py
yolofaceblur/: main.py
