[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yolofaceblur"]

[project]
name = "yolo-face-blur"
version = "0.1.0"
description = "Yolo Face Blur - Automatically detect and blur faces in a video"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "ultralytics>=8.3.218",
]

[project.scripts]
blur = "yolofaceblur.main:app"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]

[tool.black]
line_length = 90
target_version = ['py312']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
src = ["yolofaceblur"]
line-length = 90

[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "W",
    "I001",
]

[tool.mypy]
files = ["yolofaceblur"]
disable_error_code = ["import-untyped"]